[tool.poetry]
name = "motleycache"
version = "0.0.4"
description = "Package for caching http requests"
authors = ["MotleyCrew <github@motleycrew.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
curl-cffi = "^0.6.4"
httpx = "^0.27.0"
cloudpickle = "^3.0.0"
platformdirs = "^4.2.1"
lunary = { version = "^1.0.21", optional = true }

[tool.poetry.extras]
lunary = ["lunary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
